Added conclusions and recomendations

--- a/index.ipynb
+++ b/index.ipynb
@@ -669,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Fitting the logistic regression model**\n",
+    "**Fitting the baseline  logistic regression model**\n",
     "\n",
     "This step involves creating a model that uses the logistic regression algorithm to predict Churn among the telcom cleints. first we define/instantiate the model and then fit the training data.\n"
    ]
@@ -1156,13 +1156,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. RECOMENDATIONS\n"
+    "### 9. CONCLUSIONS\n",
+    "\n",
+    "The results of this analysis show that SyriaTel has a significant customer churn rate of approximately 14%. This is a significant issue, as it results in a loss of approximately 15% of revenue. To address this issue, the following recommendations have been made:\n",
+    "\n",
+    "#### **Objective 1 :** Understand the customer churn rate\n",
+    "\n",
+    "The SyriaTel customer churn rate is approximately 14%, which means that out of every 100 customers, 14 are expected to leave the company. ind addition, the 14% churn rate is approximately results to 15% of revenue loss. This is a significant number and  there is need for      immediate attention to improve customer retention.\n",
+    "\n",
+    "#### **Objective 2 :** Identify the most influential factors contributing to customer churn\n",
+    "\n",
+    "From the correlation matrix, its evident that the variables available have less correlation to the variable churn. There is need  for collecting data that is more client centred so as to explore characteristics of clients who are likely to be lost for  remediation purposes\n",
+    "\n",
+    "\n",
+    "#### **Objective 3 :** Develop a predictive model that can accurately predict the likelihood of customers churn based on their past behavior and characteristics.\n",
+    "\n",
+    "The decision Tree model stands out to be one of the most accurate model tpo predict customers churn. the model has accuracy of 71% on training data and 91% on the test data.\n",
+    "\n",
+    "The second model, which is a Ridge Regression model trained on SMOTE data, has the best performance metrics and is the most accurate for predicting customer churn among the Syria Tel Customers. The model has a precision of 0.709, a recall of 0.749, and a F1 score of 0.729 on the test data. This indicates that the model is capable of identifying customers who are most likely to churn.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### 10. RECOMENDATIONS\n",
+    "\n",
+    "The results of this analysis show that SyriaTel has a significant customer churn rate of approximately 14%. This is a significant issue, as it results in a loss of approximately 15% of revenue. To address this issue, the following recommendations have been made:\n",
+    "\n",
+    "1. Identify the most influential factors contributing to customer churn from the correlation matrix. There is need for collecting data that is more client_centred so as to explore characteristics of clients who are likely to be lost for remediation purposes. include variables such as gender, age, customers subsription  tenure etc\n",
+    "\n",
+    "2. Based on the results, we recommend the use of a Decision Tree model for predicting customer churn. This model has a high accuracy score, making it a reliable choice for this specific problem. The model can be fine-tuned and regularized to improve its performance. Additionally, the collected data should be more client_centred to provide more accurate and relevant insights for identifying the most influential factors contributing to customer churn.\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
