Updated the Readme file

--- a/rough _index.ipynb
+++ b/rough _index.ipynb
@@ -52,6 +52,74 @@
     "df.head()\n",
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "account length            0\n",
+       "area code                 0\n",
+       "phone number              0\n",
+       "international plan        0\n",
+       "voice mail plan           0\n",
+       "number vmail messages     0\n",
+       "total day minutes         0\n",
+       "total day calls           0\n",
+       "total day charge          0\n",
+       "total eve minutes         0\n",
+       "total eve calls           0\n",
+       "total eve charge          0\n",
+       "total night minutes       0\n",
+       "total night calls         0\n",
+       "total night charge        0\n",
+       "total intl minutes        0\n",
+       "total intl calls          0\n",
+       "total intl charge         0\n",
+       "customer service calls    0\n",
+       "churn                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking for Missing values\n",
+    "import numpy as np\n",
+    "np.sum(df.isnull())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3333\n",
+      "483\n",
+      "--------------------------\n",
+      "churn rate: 14.491449144914492\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get churn rates\n",
+    "Total_entries = df[\"churn\"].count()\n",
+    "churn = df[\"churn\"].value_counts()[1]\n",
+    "print(Total_entries)\n",
+    "print(churn)\n",
+    "print(\"--------------------------\")\n",
+    "print('churn rate:',(churn/Total_entries)*100)"
+   ]
   }
  ],
  "metadata": {
