--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## MACHINE LEARNING; SYRIALTEL CUNSTOMER CHURN  PREDICTION MODEL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## TABLE OF CONTENTS\n",
     "\n",
     "- Introduction\n",
